--- a/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
@@ -506,17 +506,17 @@ unionstate.60.t:0 "The Cubans Defies Us!"
 unionstate.60.d:0 "The Cubans have refused! What insolence to show the leaders of the Freest World!"
 unionstate.60.a:0 "This slight will not go unanswered"
 unionstate.60.b:0 "This hubris will be met with arms!"
-unionstate.61.t:0 "New flag for the Republic"
-unionstate.61.d:0 "While most of the troops of the American Union State are battling both the old regime and the Combined Syndicates under the eagle banner of the America First Party, some units, especially those raised on the deep south, have been flying their own colours. As this situation has come to the attention of president Long, a special committee was raised to determine a single flag for all the forces of the Republic."
-unionstate.61.a:0 "Choose the 'Coast Guard' flag"
-unionstate.61.b:0 "Adopt the 'Saltire-and-star'"
-unionstate.61.c:0 "The 'Sword-and-torch' flag"
-unionstate.61.e:0 "Keep using the current party banner"
+unionstate.61.t:0 "공화국의 새 국기"
+unionstate.61.d:0 "미주 연합의 군대가 미국 제일주의의 독수리 깃발 아래 옛 정권 그리고 생디칼리스트들과 싸우고 있는 지금, 일부 부대들, 특히 남부 성향이 강한 부대들은 그들만의 깃발을 사용하고 있습니다. 이 상황이 롱 대통령의 관심을 끌면서, 공화국의 모든 군대가 사용할 통일된 하나의 깃발을 제작하기 위한 특별 위원회가 만들어졌습니다."
+unionstate.61.a:0 "'해안 경비대'기가 적격이다"
+unionstate.61.b:0 "'샐타이어 십자가와 별'안을 채택하라"
+unionstate.61.c:0 "'검과 횃불'안을 선택하자"
+unionstate.61.e:0 "지금의 당 깃발을 계속 사용할 것이다"
 unionstate.62.t:0 "Integration of the Reactionary Officer Corps"
-unionstate.62.d:0 "The American Union State has finally established itself as the legitimate successor to the old and corrupt Federal Republic. However, even though America was only saved from Syndicalist tyranny thanks to the prowess of our military, there are some who suggest we need to incorporate those who served on the Federal side in the Civil War. The Kingfish and his party must decide."
-unionstate.62.a:0 "Together we shall make America great again!"
-unionstate.62.b:0 "We cannot risk them tainting the American new order!"
-TEX_FEDERAL_IFFICIER_CORPS:0 "Old USA leaders will be added to our army."
+unionstate.62.d:0 "미주 연합은 마침내 낡고 부패한 연방정부의 합법적인 후계자로 자리잡았습니다. 하지만 일부는 우리가 총을 겨눠야 할 것은 오직 생디칼리스트들이므로, 내전에서 연방정부 편에 섰던 사람들을 사면하고 수용할 필요가 있다고 제안합니다. 지도자와 그의 당은 결정을 내려야 합니다."
+unionstate.62.a:0 "함께라면 우리는 미국을 다시 위대하게 만들 것이다!"
+unionstate.62.b:0 "그들이 미국의 새로운 질서에 간섭하는 것은 위험하다!"
+TEX_FEDERAL_IFFICIER_CORPS:0 "옛 미합중국의 지도자들이 우리 군대에 가담할 것입니다."
 unionstate.100.t:0 "새로운 지도자"
 unionstate.100.d:0 "The failure of the plot against Huey Long has allowed him to remove his political rivals and opponents. This has given him a great leeway in reshaping America. A new day is rising in America, and Long's presence is felt everywhere even if it is not seen. America is still a republic and democracy still exists, but the American First Party dominates. The ever fickle American mob is sated by Long's Populism and peace and order has returned to America."
 unionstate.100.a:0 "모든 사람이 왕이다!"
@@ -611,12 +611,12 @@ unionstate.217.c:0 "Don't Sign the Treaty"
 unionstate.218.t:0 "Mexico Joins the League of the American States"
 unionstate.218.d:0 "The Mexicans have accepted our treaty and joined the League of American States. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Mexico."
 unionstate.218.a:0 "Good News!"
-unionstate.219.t:0 "Friendly Mexican Government"
+unionstate.219.t:0 "멕시코 정부와의 친선"
 unionstate.219.d:0 "The Mexicans have accepted our treaty. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Mexico."
 unionstate.219.a:0 "Pleasure doing business"
-unionstate.220.t:0 "Mexicans Refuse"
+unionstate.220.t:0 "멕시코의 거절"
 unionstate.220.d:0 "The Mexicans have refused to sign a genius treaty. We should have expected such stupidity from the Mexicans."
-unionstate.220.a:0 "Stupid Mexicans"
+unionstate.220.a:0 "멍청한 멕시코 놈들"
 unionstate.221.t:0 "War in Central America"
 unionstate.221.d:0 "War has erupted in Central America between the godless syndicalists in Centroamérica and the United Provinces of Central America. Many in our government are suggesting that we send both men and supplies to the United Provinces in order to stop the spread of syndicalism."
 unionstate.221.a:0 "Guns and Men to stop Syndicalism"
@@ -649,10 +649,10 @@ unionstate.228.c:0 "Refuse the Treaty!"
 unionstate.229.t:0 "Panamá Joins the League of the American States"
 unionstate.229.d:0 "Panamá have accepted our treaty and joined the League of American States. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Panamá."
 unionstate.229.a:0 "Good News!"
-unionstate.230.t:0 "Friendly Panamá"
+unionstate.230.t:0 "파나마와의 친선"
 unionstate.230.d:0 "The Panamanians have accepted our treaty. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Panamá."
 unionstate.230.a:0 "Pleasure doing business"
-unionstate.231.t:0 "Panamá Refuse"
+unionstate.231.t:0 "파나마의 거절"
 unionstate.231.d:0 "Panamas has refused to sign a genius treaty. We should have expected such stupidity from the Panamanians"
 unionstate.231.a:0 "Stupid Panamanians"
 unionstate.232.t:0 "미국과의 조약?"
@@ -668,7 +668,7 @@ unionstate.234.d:0 "The Cubans have accepted our treaty. Further cooperation bet
 unionstate.234.a:0 "Pleasure doing business"
 unionstate.235.t:0 "쿠바의 거부"
 unionstate.235.d:0 "Cuba have refused to sign a genius treaty. We should have expected such stupidity from the Cubans."
-unionstate.235.a:0 "멍청이들"
+unionstate.235.a:0 "멍청한 쿠바 놈들"
 unionstate.236.t:0 "미국과의 조약?"
 unionstate.236.d:0 "The United states have come with a treaty to improve relations between our two nations. Such a treaty will improve the trade relations and offer a guarantee of protection for Haiti. It would be foolish to say no to such an arrangement but others fear binding ourselves to the Americans."
 unionstate.236.a:0 "Let us Join the League of American States"
