4월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Belgrade_pact_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Belgrade_pact_l_english.yml
@@ -10,6 +10,17 @@ GRE_reparation_payments_desc:0 "그리스는4차 발칸전쟁에서 패배했기
 OTT_reparation_payments_from_greece:0 "그리스로부터의 전쟁 배상금"
 OTT_reparation_payments_from_greece_desc:0 "그리스가 오스만에게 전쟁 배상금을 지불하였습니다."
 
+### Decisions ###
+Belgrade_Pact_Balkan_War:0 "4차 발칸 전쟁"
+Belgrade_Pact_Romania_capture_dobrudzha_mission:0 "도브루자 확보"
+Belgrade_Pact_Romania_capture_dobrudzha_mission_desc:0 "At last we can have our revenge on the Bulgarians. It is our duty to re-capture Dobrogea, which was stolen from us by the Central Powers after the Weltkrieg."
+Belgrade_Pact_Serbia_capture_macedonia_mission:0 "마케도니아 확보"
+Belgrade_Pact_Serbia_capture_macedonia_mission_desc:0 "At last we can have our revenge on the Bulgarians. It is our duty to re-capture Macedonia, which is rightfully ours but was stolen by Bulgaria after the Weltkrieg."
+Belgrade_Pact_Greece_capture_southern_macedonia:0 "남부 마케도니아 확보"
+Belgrade_Pact_Greece_capture_southern_macedonia_desc:0 "At last we can have our revenge on the Bulgarians. It is our duty to re-capture Macedonia, which is rightfully ours but was stolen by Bulgaria after the Weltkrieg."
+Belgrade_Pact_race_to_sofia:0 "소피아 레이스"
+Belgrade_Pact_race_to_sofia_desc:0 "The Bulgarian defences have been breached and the road to Sofia now lays open. It is a matter of time before the Bulgarian captial falls. Capturing this important city would be a great success for our nation."
+
 ### Opinion Modifiers ###
 Balkans_hates_bulgaria:0 "반불가리아 정서"
 Balkans_hates_neighbours:0 "발칸반도의 패권국"
@@ -150,10 +161,10 @@ pact.25.a:0 "원조를 보내라."
 pact.25.b:0 "불가리아에 동맹을 제안하라!"
 pact.25.c:0 "우리가 할 수 있는건 없다."
 
-pact.26.t:0 "[From.GetAdj]의 지원이 도착했습니다"
+pact.26.t:0 "[From.GetAdjective]의 지원이 도착했습니다"
 pact.26.d:0 "As they had promised, the government of [From.GetNameDef] has sent us aid in the ongoing conflict against the Belgrade Pact. Unfortunately, they can't intervene directly, but several volunteer divisions and some equipment have arrived."
 pact.26.a:0 "어떤 도움이든 환영이다"
-pact.26.tt:0 "[From.GetAdj] 군대와 장비가 도착합니다."
+pact.26.tt:0 "[From.GetAdjective] 군대와 장비가 도착합니다."
 
 pact.27.t:0 "오스만 제국이 동맹을 제안하였습니다"
 pact.27.d:0 "In accordance to their earlier pledge to support us in the case of a war between Bulgaria and the Belgrade Pact, the Ottoman Empire has offered us a formal alliance. They state that they want to contain the aggression of the Pact and help us defend our country."
@@ -261,7 +272,7 @@ pact.49.d:0 "The Fourth Balkan War has not quite had the successes we had in min
 pact.49.a:0 "At least we exist."
 
 pact.50.t:0 "Peace is signed, Bulgarian victory"
-pact.50.d:0 "The Fourth Balkan War has not quite had the successes we had in mind. Bulgaria has been able to successfully mount an offensive and were on the verge of taking Belgrade. Negotiations between Serbia and Bulgaria have resulted in a peace deal. We need de-militarise Oltenia again, the kingdom will return under a regency and the Belgrade Pact will be disbanded."
+pact.50.d:0 "The Fourth Balkan War has not quite had the successes we had in mind. Bulgaria has been able to successfully mount an offensive and were on the verge of taking Belgrade. Negotiations between Serbia and Bulgaria have resulted in a peace deal. We need de-militarise Oltenia, the kingdom will return under a regency and the Belgrade Pact will be disbanded."
 pact.50.a:0 "Are they invincible?"
 
 pact.51.t:0 "Peace is signed, Bulgarian victory"
@@ -315,9 +326,9 @@ pact.61.d:0 "With the beginning of the occupation of Bulgaria we have been given
 pact.61.a:0 "Offer Dobrudzha to Romania."
 pact.61.b:0 "It will be a part of our occupation zone."
 
-pact.62.t:0 "Serbia offers Dobrudzha"
+pact.62.t:0 "Serbia offers Dobrogea"
 pact.62.d:0 "The Serbians have defeated Bulgaria and have come to us, offering Dobrudzha to us in return for allying with them. Regaining this province would calm the masses and increase our prestige abroad. Shall we accept the offer?"
-pact.62.a:0 "Welcome home, Dobrudzha!"
+pact.62.a:0 "Welcome home, Dobrogea!"
 pact.62.b:0 "We don't want it."
 
 pact.63.t:0 "Romania joins the Belgrade Pact"
@@ -350,3 +361,54 @@ pact.68.b:0 "No, we keep the land for ourselves!"
 pact.69.t:0 "Renouncing our claims"
 pact.69.d:0 "We are forced to give up all claims on land outside our territory, but at least we are reestablished as an independent nation."
 pact.69.a:0 "We have no choice."
+
+pact.70.t:0 "불가리아를 도울까요?"
+pact.70.d:0 "The Serbians have attacked Bulgaria together with their Belgrade Pact allies. During the Weltkrieg, Bulgaria had aided us by fighting alongside our men whilst sending aid in the form of weapons. Some argue we should directly intervene in favour of Bulgaria, but others say this will upset the precarious balance in the Balkans and might result in some of our neighbours declaring war on us. We can of course also ignore the conflict completely, but that would mean we don't help our former ally."
+pact.70.a:0 "지원을 보내라."
+pact.70.b:0 "불가리아에게 동맹을 제안해라!"
+pact.70.c:0 "우리가 할 수 있는 것은 없다."
+
+pact.71.t:0 "알바니아가 동맹을 제안했습니다"
+pact.71.d:0 "Surprisingly enough, the Albanians have offered us an alliance, citing the help that we’d offered them during the Weltkrieg when fighting off the Serbians. While this could prove to be beneficial, they could also prove to be a hindrance to the war effort. What say we?"
+pact.71.a:0 "좋아!"
+pact.71.b:0 "우린 알바니아가 필요없다."
+
+pact.72.t:0 "불가리아가 동맹 제안을 수락했습니다"
+pact.72.d:0 "The Bulgarian government has gladly accepted our offer of an alliance and our troops are already moving into their territory. Together, we will contain the aggression of the Belgrade Pact and defend the territorial integrity of Bulgaria."
+pact.72.a:0 "우리는 세르비아의 위협을 물리칠 것이다."
+
+pact.73.t:0 "불가리아가 동맹 제안을 거부했습니다"
+pact.73.d:0 "The Bulgarian government has declined our offer of an alliance and have stated that they don't need our help against the Belgrade Pact."
+pact.73.a:0 "그러던가."
+
+pact.74.t:0 "우리는 발칸 전쟁에서 지고 있습니다"
+pact.74.d:0 "Our intervention in the Fourth Balkan War has been a total disaster. Bulgaria is no more, and part of our land is now occupied by the Belgrade Pact. We must sue for peace while we still can!"
+pact.74.a:0 "휴전을 제안한다."
+pact.74.b:0 "아직 우린 이길 수 있어!"
+
+pact.75.t:0 "알바니아가 휴전을 제안합니다"
+pact.75.d:0 "With part of their land occupied and their forces in full retreat, Albania has asked us for peace."
+pact.75.a:0 "The Belgrade Pact stands triumphant."
+pact.75.b:0 "No, they shall be crushed!"
+
+pact.76.t:0 "Peace with the Belgrade Pact"
+pact.76.d:0 "The Belgrade Pact has accepted our peace offer. We have to cede some disputed land to them but they will retreat their forces."
+pact.76.a:0 "At least we're still a sovereign nation!"
+
+pact.77.t:0 "Albanian has surrendered"
+pact.77.d:0 "The joined armed forces of the Belgrade Pact have managed to defeat the Ottomans and have occupied Constantinople. The Ottoman Empire has surrendered an ceded some disputed land to the Pact, but we have to give them their capital back. Another enemy of us is defeated."
+pact.77.a:0 "The Belgrade Pact stands triumphant!"
+
+pact.78.t:0 "We're losing the Balkan War"
+pact.78.d:0 "Though the Balkan War brought us huge success initially as we managed to conquer Bulgaria, the Albanian intervention has turned the tide. Large parts of Bulgaria are now occupied by the Ottomans, and they continue to push. We can offer the Albanians to cede all land we have gained and dismantle the Belgrade Pact. These are harsh terms but otherwise we might lose our independence."
+pact.78.a:0 "Sue for peace."
+pact.78.b:0 "We can still win this!"
+
+pact.79.t:0 "Serbia asks for peace"
+pact.79.d:0 "We have liberated large parts of Bulgaria and the Belgrade Pact is in retreat. Now, Serbia has approached us with a peace offer. The Belgrade Pact will give up all conquered Bulgarian territory and they will disband their alliance, returning to the pre-war state. In return we allow them to keep their independence."
+pact.79.a:0 "Enough bloodshed. End this war."
+pact.79.b:0 "No, they shall be crushed!"
+
+pact.80.t:0 "Peace is signed, end of the war"
+pact.80.d:0 "Though the Balkan War brought us huge success initially as we managed to conquer Bulgaria, the Albanian intervention has turned the tide. Large parts of Bulgaria are now occupied by the Albanians. Negotiations between Serbia and the Albanians have resulted in a peace deal. We need to give up all land we gained while the Belgrade Pact will be disbanded."
+pact.80.a:0 "We will not forget this!"
